--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_home"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_term_one"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_school"
             android:title="@string/menu_term_1" />
         <item
             android:id="@+id/nav_term_two"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_school"
             android:title="@string/menu_term_2" />
     </group>
 </menu>
