--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -54,7 +54,8 @@
         android:layout_height="50dp"
         android:layout_margin="20dp"
         android:text="Get Started"
-        android:background="@color/teal_200"
+        android:background="@color/my_color"
+        android:textColor="#fff"
         android:textAllCaps="false"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
