--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,10 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:drawableStart="@android:drawable/ic_dialog_email"
-        android:drawableTint="@color/teal_200"
         android:ems="10"
-        android:hint="     Your email"
+        android:hint="Your email"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,9 +30,7 @@
         android:layout_marginRight="30dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:drawableStart="@android:drawable/ic_partial_secure"
-        android:drawableTint="@color/teal_200"
-        android:hint="        your password"
+        android:hint="your password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,8 +44,9 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="Login"
+        android:textColor="#fff"
         android:textAllCaps="false"
-        android:background="@color/teal_200"
+        android:background="@color/my_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SignUp"
-        android:textColor="@color/teal_200"
+        android:textColor="@color/my_color"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
